feat(images): generate images to folder

--- a/tensorflow.ipynb
+++ b/tensorflow.ipynb
@@ -105,7 +105,7 @@
     ")\n",
     "\n",
     "pil_img = Image.fromarray(img[0])\n",
-    "pil_img.save(\"text_to_image.jpg\")\n",
+    "pil_img.save(\"images/text_to_image.jpg\")\n",
     "display(pil_img)"
    ]
   },
@@ -152,11 +152,11 @@
     "    unconditional_guidance_scale=7.5,\n",
     "    temperature=1,\n",
     "    batch_size=1,\n",
-    "    input_image=\"text_to_image.jpg\"\n",
+    "    input_image=\"images/text_to_image.jpg\"\n",
     ")\n",
     "\n",
     "pil_img = Image.fromarray(img[0])\n",
-    "pil_img.save(\"image_to_image.jpg\")\n",
+    "pil_img.save(\"images/image_to_image.jpg\")\n",
     "display(pil_img)"
    ]
   }
