--- a/pytorch.ipynb
+++ b/pytorch.ipynb
@@ -11,7 +11,7 @@
     "from diffusers import StableDiffusionPipeline\n",
     "\n",
     "pipe = StableDiffusionPipeline.from_pretrained(\n",
-    "    'waifu-diffusion',\n",
+    "    'hakurei/waifu-diffusion',\n",
     "    torch_dtype=torch.float32\n",
     ").to('cuda')\n",
     "\n",
@@ -35,11 +35,16 @@
      "text": [
       "/Users/user/Documents/GitHub/stable-diffusion-playground/.venv/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Fetching 15 files: 100%|█████████████| 15/15 [00:00<00:00, 9230.42it/s]\n",
-      "/Users/user/Documents/GitHub/stable-diffusion-playground/.venv/lib/python3.10/site-packages/diffusers/pipelines/stable_diffusion/pipeline_stable_diffusion.py:222: UserWarning: The operator 'aten::repeat_interleave.self_int' is not currently supported on the MPS backend and will fall back to run on the CPU. This may have performance implications. (Triggered internally at /Users/runner/work/pytorch/pytorch/pytorch/aten/src/ATen/mps/MPSFallback.mm:11.)\n",
-      "  text_embeddings = text_embeddings.repeat_interleave(num_images_per_prompt, dim=0)\n",
-      "100%|████████████████████████████████████| 1/1 [00:08<00:00,  8.87s/it]\n",
-      "100%|██████████████████████████████████| 50/50 [01:03<00:00,  1.26s/it]\n"
+      "Fetching 15 files: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 15/15 [00:00<00:00, 76818.75it/s]\n",
+      "Cannot initialize model with low cpu memory usage because `accelerate` was not found in the environment. Defaulting to `low_cpu_mem_usage=False`. It is strongly recommended to install `accelerate` for faster and less memory-intense model loading. You can do so with: \n",
+      "```\n",
+      "pip install accelerate\n",
+      "```\n",
+      ".\n",
+      "  0%|                                                                                                                                                                                                                           | 0/1 [00:00<?, ?it/s]/Users/user/Documents/GitHub/stable-diffusion-playground/.venv/lib/python3.10/site-packages/torch/nn/functional.py:3930: UserWarning: MPS: passing scale factor to upsample ops is supported natively starting from macOS 13.0. Falling back on CPU. This may have performance implications. (Triggered internally at /Users/runner/work/pytorch/pytorch/pytorch/aten/src/ATen/native/mps/operations/UpSample.mm:224.)\n",
+      "  return torch._C._nn.upsample_nearest2d(input, output_size, scale_factors)\n",
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00,  1.32it/s]\n",
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 50/50 [00:22<00:00,  2.18it/s]\n"
      ]
     },
     {
@@ -66,13 +71,13 @@
     "pipe = StableDiffusionPipeline.from_pretrained(\n",
     "    model_id,\n",
     "    torch_dtype=torch.float32,\n",
-    "    scheduler=DDIMScheduler(\n",
-    "        beta_start=0.00085,\n",
-    "        beta_end=0.012,\n",
-    "        beta_schedule=\"scaled_linear\",\n",
-    "        clip_sample=False,\n",
-    "        set_alpha_to_one=False,\n",
-    "    ),\n",
+    "    # scheduler=DDIMScheduler(\n",
+    "    #     beta_start=0.00085,\n",
+    "    #     beta_end=0.012,\n",
+    "    #     beta_schedule=\"scaled_linear\",\n",
+    "    #     clip_sample=False,\n",
+    "    #     set_alpha_to_one=False,\n",
+    "    # ),\n",
     ")\n",
     "pipe = pipe.to(device)\n",
     "pipe.safety_checker = lambda images, **kwargs: (images, False)\n",
@@ -96,7 +101,7 @@
     "    prompt,\n",
     "    guidance_scale=6,\n",
     "    # generator=generator,\n",
-    ")[\"sample\"][0]\n",
+    ").images[0]\n",
     "datetime_str = datetime.now().strftime('%Y_%m_%d_%H_%M_%S')\n",
     "image.save(f\"images/{datetime_str}.jpg\")\n",
     "image"
