feat(pytorch): set safety checker to None

--- a/pytorch.ipynb
+++ b/pytorch.ipynb
@@ -80,7 +80,7 @@
     "    # ),\n",
     ")\n",
     "pipe = pipe.to(device)\n",
-    "pipe.safety_checker = lambda images, **kwargs: (images, False)\n",
+    "pipe.safety_checker = None\n",
     "\n",
     "prompt = \"extremely detailed CG wallpaper,\" \\\n",
     "    \"dark blue hair,\" \\\n",
